Primera revisión de documentación [#13]

--- a/doc/proyectdoc/bibliografia.bib
+++ b/doc/proyectdoc/bibliografia.bib
@@ -1,135 +1,14 @@
-@misc{gradle,
-	title = {{Gradle Build Tool}},
-	url = {https://gradle.org/},
-	urldate = {2018-01-04}
-}
 @book{claudia,
-	title = {{Memoria TFG UBUGrades }},
+	title = {{Memoria TFG UBUGrades}},
 	author    = "Martínez Herrero, Claudia",
-	year      = "2017"
+	year      = "2017",
+	publisher = {{Universidad de Burgos}}
 }
-
 @book{claudia:anexo,
 	title = {{Anexo TFG UBUGrades }},
 	author    = "Martínez Herrero, Claudia",
-	year      = "2017"
-}
-
-@misc{Java:htmlunit,
-	title = {{HtmlUnit – Welcome to HtmlUnit}},
-	url = {http://htmlunit.sourceforge.net/},
-	urldate = {2017-12-07}
-}
-@misc{Java:csv,
-	title = {{Commons CSV – Home}},
-	url = {https://commons.apache.org/proper/commons-csv/},
-	urldate = {2017-12-04}
-}
-@misc{Java:httpclient,
-	title = {{Biblioteca de clientes HTTP para Java | Desarrolladores de Google}},
-	url = {https://developers.google.com/api-client-library/java/google-http-java-client/},
-	urldate = {2017-12-04}
-}
-@misc{Java:log,
-	title = {{Log4j – Apache Log4j 2 - Apache Log4j 2}},
-	url = {https://logging.apache.org/log4j/2.x/},
-	urldate = {2017-12-04}
-}
-@misc{Web:worckbench,
-	title = {{MySQL :: MySQL Workbench}},
-	url = {https://www.mysql.com/products/workbench/},
-	urldate = {2017-12-04}
-}
-@misc{Web:texsturdio,
-	title = {{TeXstudio}},
-	url = {https://www.texstudio.org/},
-	urldate = {2017-12-03}
-}
-@misc{Web:zenhub,
-	title = {{ZenHub}},
-	url = {https://www.zenhub.com/faq},
-	urldate = {2017-12-03}
-}
-@misc{Web:eclipse,
-	author = {Web:eclipse},
-	title = {{Eclipse Neon}},
-	url = {https://www.eclipse.org/neon/},
-	urldate = {2017-12-03}
-}
-@misc{Web:texstudio,
-	title = {{TexStudio}},
-	url = {https://www.texstudio.org/},
-	urldate = {2017-12-03}
-}
-@misc{Web:sonarqube,
-	title = {{SonarQube - GII-17.1B-UBULog-1.0 - Oscar Fernández}},
-	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0},
-	urldate = {2017-12-03}
-}
-@misc{web:github,
-	title = {{GitHub}},
-	url = {https://github.com/trona85/GII-17.1B-UBULog-1.0},
-	year = {2017}
-}
-@misc{web:git,
-	title = {{Git - Documentati{\'{o}}n}},
-	url = {https://git-scm.com/doc},
-	urldate = {2017-12-03}
-}
-@misc{javascript:table,
-	title = {{W3.CSS Filters}},
-	url = {https://www.w3schools.com/w3css/w3css{\_}filters.asp},
-	urldate = {2017-11-30}
-}
-@misc{java:csvparser,
-	title = {{CSVParser (Apache Commons CSV 1.5.1-SNAPSHOT API)}},
-	url = {https://commons.apache.org/proper/commons-csv/apidocs/org/apache/commons/csv/CSVParser.html{\#}parse-java.io.File-java.nio.charset.Charset-org.apache.commons.csv.CSVFormat-},
-	urldate = {2017-11-29}
-}
-@misc{web:mendeley,
-	title = {{Mendeley - aplicaci{\'{o}}n para guardar y exportar referencias a latex}},
-	url = {https://www.mendeley.com/}
-}
-@misc{,
-	title = {{git reflog | Tutorial para aprender git}},
-	url = {https://www.atlassian.com/git/tutorials/rewriting-history/git-reflog}
-}
-@misc{web:travis,
-	title = {{Travis CI - Integraci{\'{o}}n continua}},
-	url = {https://travis-ci.org/trona85/GII-17.1B-UBULog-1.0/}
-}
-@misc{OscarFernandezArmengol,
-	author = {{Oscar Fern{\'{a}}ndez Armengol}},
-	title = {{GII-17.1B-UBULog-1.0 - sonarqube - Ver calidad del c{\'{o}}digo}},
-	url = {https://sonarcloud.io/dashboard?id=GII-17.1B-UBULog-1.0}
-}
-@misc{web:sublime,
-	title = {{Sublime Text 3 - IDE para JavaScript y HTML}},
-	url = {https://www.sublimetext.com/3}
-}
-@misc{,
-	title = {{instalacion Moodle3.3 - MoodleDocs}},
-	url = {https://docs.moodle.org/33/en/Installing{\_}Moodle}
-}
-@misc{moodle:webservice,
-	title = {{Funciones API web servic - MoodleDocs}},
-	url = {https://docs.moodle.org/dev/Web{\_}service{\_}API{\_}functions}
-}
-@misc{javascript:chart,
-	title = {{Librería para generar los gráficos - Chart.js {\textperiodcentered} Documentaci{\'{o}}n}},
-	url = {http://www.chartjs.org/docs/latest/}
-}
-@misc{java:calendar,
-	title = {{Calendar (Java Platform SE 8 )}},
-	url = {https://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html{\#}set-int-int-}
-}
-@misc{java:filewriter,
-	title = {{FileWriter (Java Platform SE 8 )}},
-	url = {https://docs.oracle.com/javase/8/docs/api/java/io/FileWriter.html}
-}
-@misc{moolde:estadistic,
-	title = {{Moodle.org: Estad{\'{i}}sticas del uso de moodle}},
-	url = {https://moodle.net/stats/}
+	year      = "2017",
+	publisher = {{Universidad de Burgos}}
 }
 @book{LasaGomez2017,
 	abstract = {Índices},
@@ -148,19 +27,140 @@
 	title = {{Agile project management with Scrum}},
 	year = {2004}
 }
-@book{,
-	title = {{Resumen del libro Scrum, de Jeff Sutherland}},
-	url = {https://www.leadersummaries.com/ver-resumen/scrum}
-}
-@article{,
-	journal = {Proyectos {\'{A}}giles},
-	title = {{Beneficios de Scrum}},
-	url = {http://www.proyectosagiles.org/beneficios-de-scrum},
-	year = {2008}
-}
-@article{art:mvc,
-	keywords = {wiki},
+@misc{art:mvc,
+	author = "Wikipedia",
 	title = {{Modelo vista controlador  — Wikipedia, La enciclopedia libre}},
-	url = {https://es.wikipedia.org/wiki/Modelo–vista–controlador},
+	howpublished = {\url{https://es.wikipedia.org/wiki/Modelo–vista–controlador}},
 	year = {2017}
 }
+@misc{gradle,
+	author = "{{Gradle Inc.}} ",
+	title = {{Gradle Build Tool}},
+	howpublished = {\url{https://gradle.org/}},
+	urldate = {2018-01-04}
+}
+
+@misc{Java:htmlunit,
+	author = "{{}} ",
+	title = {{HtmlUnit – Welcome to HtmlUnit}},
+	howpublished = {\url{http://htmlunit.sourceforge.net/}},
+	urldate = {2017-12-07}
+}
+@misc{Java:csv,
+	author = "{{Apache Software Foundation}} ",
+	title = {{Commons CSV – Home}},
+	howpublished = {\url{https://commons.apache.org/proper/commons-csv/}},
+	urldate = {2017-12-04}
+}
+@misc{Java:httpclient,
+	author = "{{Comunidad de desarrolladores de Google}} ",
+	title = {{Biblioteca de clientes HTTP para Java | Desarrolladores de Google}},
+	howpublished = {\url{https://developers.google.com/api-client-library/java/google-http-java-client/}},
+	urldate = {2017-12-04}
+}
+@misc{Java:log,
+	author = "{{Apache Software Foundation}} ",
+	title = {{Log4j – Apache Log4j 2 - Apache Log4j 2}},
+	howpublished = {\url{https://logging.apache.org/log4j/2.x/}},
+	urldate = {2017-12-04}
+}
+@misc{Web:worckbench,
+	author = "{{Oracle Corporation}} ",
+	title = {{MySQL -- MySQL Workbench}},
+	howpublished = {\url{https://www.mysql.com/products/workbench/}},
+	urldate = {2017-12-04}
+}
+@misc{web:texstudio,
+	author = "{{Benito van der Zander, Jan Sundermeyer, Daniel Braun, Tim Hoffmann}} ",
+	title = {{TeXstudio}},
+	howpublished = {\url{https://www.texstudio.org/}},
+	urldate = {2017-12-03}
+}
+@misc{Web:eclipse,
+	author = "{{The Eclipse Foundation}} ",
+	title = {{Eclipse Neon}},
+		howpublished = {\url{https://www.eclipse.org/neon/}},
+	urldate = {2017-12-03}
+}
+@misc{Web:zenhub,
+	author = "{{ZenHub}} ",
+	title = {{ZenHub}},
+	howpublished = {\url{https://www.zenhub.com/faq}},
+	urldate = {2017-12-03}
+}
+@misc{Web:sonarqube,
+	author = "{{SonarSource S.A}} ",
+	title = {{SonarQube }},
+	howpublished = {\url{https://www.sonarqube.org/}},
+	urldate = {2017-12-03}
+}
+@misc{web:github,
+	author = "{{GitHub, Inc.}} ",
+	title = {{GitHub}},
+	howpublished = {\url{https://github.com}},
+	year = {2017}
+}
+@misc{web:git,
+	author = "{{}} ",
+	title = {{Git - Documentati{\'{o}}n}},
+	howpublished = {\url{https://git-scm.com/doc}},
+	urldate = {2017-12-03},
+	year = {}
+}
+@misc{java:csvparser,
+	author = "{{Apache Software Foundation.}} ",
+	title = {{CSVParser (Apache Commons CSV 1.5.1-SNAPSHOT API)}},
+	howpublished = {\url{https://commons.apache.org/proper/commons-csv/apidocs/org/apache/commons/csv/CSVParser.html}},
+	urldate = {2017-11-29},
+	year = {2017}
+	
+}
+@misc{web:mendeley,
+	author = "{{Mendeley Ltd}} ",
+	title = {{Mendeley - aplicaci{\'{o}}n para guardar y exportar referencias a latex}},
+	howpublished = {\url{https://www.mendeley.com/}},
+	year = {2017}
+}
+@misc{web:travis,
+	author = "{{Travis CI, GmbH}} ",
+	title = {{Travis CI - Integraci{\'{o}}n continua}},
+	howpublished = {\url{https://travis-ci.org}},
+	year = {2017}
+}
+@misc{web:sublime,
+	author = "{{Sublime HQ Pty Ltd}} ",
+	title = {{Sublime Text 3 - IDE para JavaScript y HTML}},
+	howpublished = {\url{https://www.sublimetext.com/3}},
+	year = {}
+}
+@misc{moodle:webservice,
+	author = "{{Moodle}} ",
+	title = {{Funciones API web servic - MoodleDocs}},
+	howpublished = {\url{https://docs.moodle.org/dev/Web{\_}service{\_}API{\_}functions}},
+	year = {}
+}
+@misc{javascript:chart,
+	author = "{{}} ",
+	title = {{Librería para generar los gráficos - Chart.js {\textperiodcentered} Documentaci{\'{o}}n}},
+	howpublished = {\url{http://www.chartjs.org/docs/latest/}},
+	year = {2018}
+}
+@misc{java:calendar,
+	author = "{{Oracle and/or its affiliates}} ",
+	title = {{Calendar (Java Platform SE 8 )}},
+	howpublished = {\url{https://docs.oracle.com/javase/8/docs/api/java/util/Calendar.html}},
+	year = {2017}
+}
+@misc{java:filewriter,
+	author = "{{Oracle and/or its affiliates}} ",
+	title = {{FileWriter (Java Platform SE 8 )}},
+		howpublished = {\url{https://docs.oracle.com/javase/8/docs/api/java/io/FileWriter.html}},
+	year = {2017}
+}
+@misc{moolde:estadistic,
+	author = "{{Moodle}} ",
+	title = {{Moodle.org: Estad{\'{i}}sticas del uso de moodle}},
+		howpublished = {\url{https://moodle.net/stats/}},
+	year = {2018}
+}
+
