--- a/doc/proyectdoc/memoria.tex
+++ b/doc/proyectdoc/memoria.tex
@@ -39,10 +39,10 @@
 
 % Imagenes
 \usepackage{graphicx}
-\newcommand{\imagen}[2]{
+\newcommand{\imagen}[3]{
 	\begin{figure}[htbp]
 		\centering
-		\includegraphics[width=0.9\textwidth]{#1}
+		\includegraphics[width=#3\textwidth]{#1}
 		\caption{#2}\label{fig:#1}
 	\end{figure}
 	\FloatBarrier
@@ -361,11 +361,11 @@
 \makeatother
 
 \newcommand{\nombre}{Oscar Fernández Armengol} %%% cambio de comando
-
+\newcommand{\profesor}{Dr. Raúl Marticorena Sánchez}
 % Datos de portada
 \title{UBULog 1.0}
 \author{\nombre}
-\tutor{Dr. Raúl Marticorena Sánchez}
+\tutor{\profesor}
 \date{\today}
 
 \begin{document}
@@ -382,7 +382,7 @@
 
 \noindent\includegraphics[width=\textwidth]{cabecera}\vspace{1cm}
 
-\noindent D. \tutor, profesor del departamento de ingeniería civil, área de lenguajes y sistemas informáticos.
+\noindent D. \profesor , profesor del departamento de ingeniería civil, área de lenguajes y sistemas informáticos.
 
 \noindent Expone:
 
@@ -400,7 +400,7 @@ En Burgos, {\large \today}
 \begin{minipage}{0.45\textwidth}
 \begin{flushleft} %\large
 Vº. Bº. del Tutor:\\[2cm]
-D. nombre tutor
+D. \profesor
 \end{flushleft}
 \end{minipage}
 \hfill
@@ -491,7 +491,7 @@ learning, web scripting.
 \include{./tex/3_Conceptos_teoricos}
 \include{./tex/4_Tecnicas_y_herramientas}
 \include{./tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto}
-%\include{./tex/6_Trabajos_relacionados}
+\include{./tex/6_Trabajos_relacionados}
 \include{./tex/7_Conclusiones_Lineas_de_trabajo_futuras}
 
 
