--- a/doc/proyectdoc/tex/2_Objetivos_del_proyecto.tex
+++ b/doc/proyectdoc/tex/2_Objetivos_del_proyecto.tex
@@ -39,6 +39,8 @@ realización del proyecto.
 	Utilizar ZenHub como herramienta de gestión de proyectos.
 	\item
 	Utilizar Mendeley para almacenamiento de bibliografía.
+	\item
+	Utilización de Web Scripting para la automatización en la descarga del log.
 \end{itemize}
 
 \section{Objetivos personales}\label{objetivos-personales}
