--- a/doc/proyectdoc/tex/6_Trabajos_relacionados.tex
+++ b/doc/proyectdoc/tex/6_Trabajos_relacionados.tex
@@ -1,3 +1,22 @@
 \capitulo{6}{Trabajos relacionados}
 
-Este apartado sería parecido a un estado del arte de una tesis o tesina. En un trabajo final grado no parece obligada su presencia, aunque se puede dejar a juicio del tutor el incluir un pequeño resumen comentado de los trabajos y proyectos ya realizados en el campo del proyecto en curso. 
+\section{UBUGrades 1.0}\label{ubugrades--10}
+
+Esta aplicación es el TFG de Claudia Martinez Herrero \cite{claudia} del que se ha partido para hacer nuestra aplicación.
+
+En esta aplicación se recolectan os datos del Web Service de Moodle para sacar gráficas con las notas de los alumnos de la plataforma UBUVirtual.
+
+\section{Heatmap}\label{heatmap}
+
+\href{https://moodle.org/plugins/block_heatmap}{\emph{Heatmap}} es un plugin de Moodle que nos permite hacer mapas de calor dependiendo de el numero de interacciones que hayan hecho los participantes.
+
+Este plugin esta inspirado en \emph{Moodle Activity Viewer}.
+
+\section{ Moodle Activity Viewer}\label{moodle-activity-viewer}
+
+\href{https://damos.world/2013/08/30/the-moodle-activity-viewer-mav-heatmaps-of-student-activity/}{ \emph{Moodle Activity Viewer}} es un plugin de Moodle que nos permite hacer mapas de calor de las actividades de la asignatura dependiendo de las interacciones que tienen en ellas los participantes.
+
+
+\section{Course dedication}\label{course-dedication}
+
+\href{https://moodle.org/plugins/block_dedication}{\emph{Course dedication}} es un plugin de Moodle que nos permite mostrar gráficas con la dedicación de los participantes a una asignatura concreta. Para generar esas gráficas tiene en cuenta la duración de la sesión y las actividades donde hace clic el usuario.
