--- a/doc/proyectdoc/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/doc/proyectdoc/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -20,9 +20,9 @@ En la finalización del proyecto podemos sacar las siguientes conclusiones.
 	\item
 	Hay que tener cuidado con la documentación que existe en internet, aunque sea la oficial, en alguna librería utilizada la documentación conducía a errores de implementación y hay que observar el propio código.
 	\item
-	Al utilizar la metodología ágil scrum, se ha desarrollado el proyecto de la forma más profesional posible, sufriendo la presión de las entregas, lo que será habitual en el entorno laboral.
+	Al utilizar la metodología ágil Scrum, se ha desarrollado el proyecto de la forma más profesional posible, sufriendo la presión de las entregas, lo que será habitual en el entorno laboral.
 	\item
-	Es complicado calcular la duración de los issue, se puede decir, que he sido optimista en el cálculo, excepto en un par de issue los demás se finalizaban antes de lo esperado.
+	Es complicado calcular la duración de los \emph{issue}, se puede decir, que he sido optimista en el cálculo, excepto en un par de \emph{issue} los demás se finalizaban antes de lo esperado.
 	
 \end{itemize}
 
@@ -37,9 +37,9 @@ En la finalización del proyecto podemos sacar las siguientes conclusiones.
 	\item
 	Como en los log tenemos la IP por donde se han conectado a UBUVirtual, podríamos hacer estadísticas de por donde se conectan las personas o incluso hacer minería con estos datos para saber cuándo se conectan más.
 	\item
-	Añadir más tipos de gráficos. Hemos metido 3, pero convendría poner más tipos ya que hay muchos tipos de usuarios y para diferentes datos habrá gustos diferentes de gráficos.
+	Añadir más tipos de gráficos. Hemos incluido 3, pero convendría añadir más tipos ya que hay muchos tipos de usuarios y para diferentes datos habrá diferentes gráficos.
 	\item
-	Al descargar el log, hay unos select que nos permite elegir ciertas opciones para filtrar los log y después descargar esos log. Habría que implementar para que el usuario se pueda descargar el log automáticamente modificando esas opciones.
+	Al descargar el log, hay unos select que nos permite elegir ciertas opciones para filtrar los log y después descargar esos log. Habría que implementar un método que nos permita modificar esos campos y descargar un log que en un primer momento ya nos vendría filtrado. Un ejemplo sería, que el usuario solo le interesen los log referentes a Diciembre.
 	\item
 	Implementar traducciones para tener una aplicación en diferentes idiomas.
 	\item
