--- a/doc/proyectdoc/tex/A_Plan_proyecto.tex
+++ b/doc/proyectdoc/tex/A_Plan_proyecto.tex
@@ -4,7 +4,7 @@
 
 En este documento hablaremos de la planificación del proyecto, que es una parte muy importante. Aquí analizaremos el tiempo de desarrollo y el presupuesto que se necesitara para llevarlo a cabo.
 
-lo dividiremos en dos partes:
+Lo dividiremos en dos partes:
 
 \begin{itemize}
 	\tightlist
@@ -20,7 +20,7 @@ En el estudio de viabilidad hablaremos de los costes y beneficios que nos aporta
 
 \section{Planificación temporal}
 
-Al inicio del proyecto se propuso utilizar una metodología ágil, en concreto Scrum, ya que se decidió tener reuniones semanales para hablar de los cambios realizados, problemas ocasionados y planificación del siguiente Sprint que se realizara. No se ha conseguido desarrollar la metodología al 100\% ya que el el equipo de desarrollo constaba de 1 persona (Oscar Fernández Armengol), pero desechando este punto, se ha conseguido un desarrollo ágil en sus demás puntos. 
+Al inicio del proyecto se propuso utilizar una metodología ágil, en concreto Scrum, ya que se decidió tener reuniones semanales para hablar de los cambios realizados, problemas ocasionados y planificación del siguiente \emph{sprint} que se realizara. No se ha conseguido desarrollar la metodología al 100\% ya que el el equipo de desarrollo constaba de 1 persona (Oscar Fernández Armengol), pero desechando este punto, se ha conseguido un desarrollo ágil en sus demás puntos. 
 
 \begin{itemize}
 	\tightlist
@@ -37,7 +37,7 @@ Al inicio del proyecto se propuso utilizar una metodología ágil, en concreto S
 	\item
 	En la planificación del \emph{sprint} se generaba una lista de tareas a realizar (nuevas funcionalidades o bugs a solucionar).
 	\item
-	Se estimaba el tiempo de realización de las tareas a realizar en el \emph{canvas}.
+	Se estimaba el tiempo de realización de las tareas a realizar en el \emph{kanbas}.
 	\item
 	Para monitorizar el progreso del proyecto se utilizan los gráficos generados en GitHub.
 	
@@ -45,7 +45,7 @@ Al inicio del proyecto se propuso utilizar una metodología ágil, en concreto S
 
 \subsection{Sprint 1 (03/10/17 -
 	10/10/17)}\label{sprint-1-0031017---101017}
-Este \emph{sprint} fue el comienzo del proyecto, aunque en reuniones previas se habló con el tutor de las propuestas que tenía para la elección del proyecto, una vez el tutor (Raúl Marticorena Sánchez) acepto tutorizar al alumno (Oscar Fernández Armengol) se puedo empezar el desarrollo.
+Este \emph{sprint} fue el comienzo del proyecto, aunque en reuniones previas se habló con el tutor de las propuestas que tenía para la elección del proyecto, una vez el tutor (Raúl Marticorena Sánchez) aceptó tutorizar al alumno (Oscar Fernández Armengol) y pudo empezar el desarrollo.
 
 Los objetivos fueron:
 \begin{itemize}
@@ -62,7 +62,7 @@ Los objetivos fueron:
 \end{itemize}
 El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/1?closed=1}{Sprint 1} se estimó en 6 días de trabajo y se realizó en esos 6 días.
 
-\imagen{sprint1}{Sprint 1.}
+\imagen{sprint1}{Sprint 1.}{0.9}
 
 \subsection{Sprint 2 (10/10/17 -
 	17/10/17)}\label{sprint-2-101017---171017}
@@ -81,7 +81,7 @@ Los objetivos fueron:
 
 El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/2?closed=1}{Sprint 2} se estimó en 6 días de trabajo y se realizó en esos 6 días.
 
-\imagen{sprint2}{Sprint 2.}
+\imagen{sprint2}{Sprint 2.}{0.9}
 
 \subsection{Sprint 3 (17/10/17 -
 	24/10/17)}\label{sprint-3-171017---241017}
@@ -96,7 +96,7 @@ Los objetivos fueron:
 	\item
 	Recoger token con Web Service.	
 	\item
-	Recoger las asignaturas en las que imparte como profesor el usuario logueado.
+	Recoger las asignaturas en las que imparte como profesor el usuario que ha iniciado sesión.
 	\item
 	Referencia al usuario con su id en el parseo.
 	\item
@@ -106,11 +106,11 @@ Los objetivos fueron:
 	
 \end{itemize}
 
-En este sprint, cabe destacar, la integración de Travis\cite{web:travis} y SonarQube \cite{web:sonarqube} para optimizar el tiempo de desarrollo, ya que delegamos en estas herramientas las pruebas y el análisis del código.
+En este \emph{sprint}, cabe destacar, la integración de Travis\cite{web:travis} y SonarQube \cite{web:sonarqube} para optimizar el tiempo de desarrollo, ya que delegamos en estas herramientas las pruebas y el análisis del código.
 
 El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/3?closed=1}{Sprint 3} se estimó en 7 días de trabajo y se realizó en esos 6 días.
 
-\imagen{sprint3}{Sprint 3.}
+\imagen{sprint3}{Sprint 3.}{0.9}
 
 \subsection{Sprint 4 (24/10/17 -
 	7/11/17)}\label{sprint-4-241017---071117}
@@ -129,11 +129,11 @@ Los objetivos fueron:
 	
 \end{itemize}
 
-En este sprint, cabe destacar, la creación de usuarios ficticios, ya que hay usuarios que tienen interacciones en las asignaturas y nos interesa saber que están haciendo.
+En este \emph{sprint}, cabe destacar, la creación de usuarios ficticios, ya que hay usuarios que tienen interacciones en las asignaturas y nos interesa saber que están haciendo.
 
 El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/4?closed=1}{Sprint 4} se estimó en 5 días de trabajo y se realizó en esos 6 días.
 
-\imagen{sprint4}{Sprint 4.}
+\imagen{sprint4}{Sprint 4.}{0.9}
 
 \subsection{Sprint 5 (7/11/17 -
 	14/11/17)}\label{sprint-5-071117---141117}
@@ -152,11 +152,11 @@ Los objetivos fueron:
 	
 \end{itemize}
 
-En este sprint, cabe destacar, el nuevo diseño para la ventana principal, la antigua no era re-dimensionable y como había que implementar nuevos filtros y botones más adelante, se optó por rehacerla.
+En este \emph{sprint}, cabe destacar, el nuevo diseño para la ventana principal, la antigua no era re-dimensionable y como había que implementar nuevos filtros y botones más adelante, se optó por rehacerla.
 
 El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/5?closed=1}{Sprint 5} se estimó en 7 días de trabajo y se realizó en esos 6 días.
 
-\imagen{sprint5}{Sprint 5.}
+\imagen{sprint5}{Sprint 5.}{0.9}
 
 \subsection{Sprint 6 (14/11/17 -
 	22/11/17)}\label{sprint-6-141117---221117}
@@ -177,11 +177,11 @@ Los objetivos fueron:
 	
 \end{itemize}
 
-En este sprint, cabe destacar, la utilización de la librería Chart.js para la generación de gráficos. Como el gráfico es cambiante dependiendo de los filtros pulsados, optamos en generar los HTML y JavaScript en tiempo de ejecución.
+En este \emph{sprint}, cabe destacar, la utilización de la librería Chart.js para la generación de gráficos. Como el gráfico es cambiante dependiendo de los filtros pulsados, optamos en generar los HTML y JavaScript en tiempo de ejecución.
 
 El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/6?closed=1}{Sprint 6} se estimó en 8 días de trabajo y se realizó en esos 7 días.
 
-\imagen{sprint6}{Sprint 6.}
+\imagen{sprint6}{Sprint 6.}{0.9}
 
 \subsection{Sprint 7 (22/11/17 -
 	29/11/17)}\label{sprint-7-221117---291117}
@@ -194,7 +194,7 @@ Los objetivos fueron:
 	\item
 	Ordenar selección de eventos.
 	\item
-	imagen de usuario logueado.	
+	imagen de usuario que ha iniciado sesión.	
 	\item
 	UTF-8 para el gráfico.
 	
@@ -202,7 +202,7 @@ Los objetivos fueron:
 
 El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/7?closed=1}{Sprint 7} se estimó en 8 días de trabajo y se realizó en esos 5 días.
 
-\imagen{sprint7}{Sprint 7.}
+\imagen{sprint7}{Sprint 7.}{0.9}
 
 \subsection{Sprint 8 (28/11/17 -
 	06/12/17)}\label{sprint-8-281117---061217}
@@ -225,13 +225,13 @@ Los objetivos fueron:
 	
 \end{itemize}
 
-En este sprint, cabe destacar, el cambio en el parseo, dado que había incongruencias entre los log de pruebas y los reales, para evitar eso, se implementa con la librería Common-csv \cite{Java:csv}, con ella cogemos los datos correspondientes a la columna concreta y nos evitamos que en las pruebas el usuario sea ''alumno apellido1 apellido2'' y en producción sea ''apellido1 apellido2, alumno''.
+En este \emph{sprint}, cabe destacar, el cambio en el parseo, dado que había incongruencias entre los log de pruebas y los reales, para evitar eso, se implementa con la librería Common-csv \cite{Java:csv}, con ella cogemos los datos correspondientes a la columna concreta y nos evitamos que en las pruebas el usuario sea ``alumno apellido1 apellido2'' y en producción sea ``apellido1 apellido2, alumno''.
 
 Por otra parte, también es interesante la implementación de las tablas, donde el usuario de la aplicación puede ver los log filtrados y desgranar aún más los datos con filtros adicionales.
 
 El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/8?closed=1}{Sprint 8} se estimó en 10 días de trabajo y se realizó en esos 6 días.
 
-\imagen{sprint8}{Sprint 8.}
+\imagen{sprint8}{Sprint 8.}{0.9}
 
 \subsection{Sprint 9 (06/12/17 -
 	13/12/17)}\label{sprint-9-061217---131217}
@@ -244,7 +244,7 @@ Los objetivos fueron:
 	\item
 	Implementar funcionalidad filtros de tabla de logs y cargar la nueva gráfica con los log resultantes.
 	\item
-	Investigar la utilización de Web Scraping para nuestra aplicación.
+	Investigar la utilización de Web Scripting para nuestra aplicación.
 	\item
 	Crear botones en la interfaz para coger el CSV de forma automática.
 	\item
@@ -252,11 +252,11 @@ Los objetivos fueron:
 	
 \end{itemize}
 
-En este sprint, cabe destacar, la investigación del Web Scraping, se estimó que se haría en 5 días más 3 días de implementación, en una mañana, se pudieron probar las librerías Jsoup, Selenium y HtmlUnit. Las dos primeras se descartaron, Selenium por problemas de ubicación de exploradores porque no podemos saber donde el usuario los tendrá instalados y lo descartamos y Jsoup solo parsea la web, no nos deja interaccionar con ella. Con la librería htmlUnit hicimos pruebas y conseguimos traernos los datos correspondientes, en la misma mañana pudimos hacer el trabajo que esperábamos hacer en 8 días.
+En este \emph{sprint}, cabe destacar, la investigación del Web Scripting, se estimó que se haría en 5 días más 3 días de implementación, en una mañana, se pudieron probar las librerías Jsoup, Selenium y HtmlUnit. Las dos primeras se descartaron, Selenium por problemas de ubicación de exploradores porque no podemos saber donde el usuario los tendrá instalados y lo descartamos y Jsoup solo parsea la web, no nos deja interaccionar con ella. Con la librería htmlUnit hicimos pruebas y conseguimos traernos los datos correspondientes, en la misma mañana pudimos hacer el trabajo que esperábamos hacer en 8 días.
 
 El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/9?closed=1}{Sprint 9} se estimó en 15 días de trabajo y se realizó en esos 3 días.
 
-\imagen{sprint9}{Sprint 9.}
+\imagen{sprint9}{Sprint 9.}{0.9}
 
 \subsection{Sprint 10 (13/12/17 -
 	20/12/17)}\label{sprint-10-131217---201217}
@@ -279,13 +279,13 @@ Los objetivos fueron:
 	\item
 	Arreglo de la muestra de fechas de la tabla log.
 	\item
-	Aumentar TimeOut de WebScraping.
+	Aumentar TimeOut de Web Scripting.
 	
 \end{itemize}
 
 El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/10?closed=1}{Sprint 10} se estimó en 12 días de trabajo y se realizó en esos 5 días.
 
-\imagen{sprint10}{Sprint 10.}
+\imagen{sprint10}{Sprint 10.}{0.9}
 
 \subsection{Sprint 11 (20/12/17 -
 	12/01/18)}\label{sprint-11-201217---120118}
@@ -304,11 +304,11 @@ Los objetivos fueron:
 	
 \end{itemize}
 
-Este es el último spring del proyecto, y el más largo, se completará la memoria, anexos, documentación de código y se arreglaran bugs que se han observado durante el desarrollo y el testeo manual.
+Este es el último \emph{sprint} del proyecto, y el más largo, se completará la memoria, anexos, documentación de código y se arreglaran bugs que se han observado durante el desarrollo y el testeo manual.
 
-El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/11?closed=1}{Sprint 10}
+El \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/milestone/11?closed=1}{Sprint 11} se estimó en 11 días de trabajo y se realizó en esos 10 días.
 
-%\imagen{sprint11}{Sprint 11.}
+\imagen{sprint11}{Sprint 11.}{0.9}
 
 
 \section{Estudio de viabilidad}
@@ -349,7 +349,7 @@ El proyecto se realiza con el ordenador personal y se considera la amortización
 El proyecto se ha pensado para ayudar al profesorado a ver la interacción de los alumnos en la asignatura. Se puede considerar un coste de 5 euros por licencia y que en la universidad hay, redondeando, 700 profesores estamos hablando de 3500 euros, la aplicación en un futuro cambiara y llegara a la 2.0 con lo cual habría que volver a pagar la nueva licencia.
 
 La aplicación se puede extender a diferentes centros aparte de la UBU.
-Si lo observamos en ese sentido se podría cobrear 500 euros por licencia, para su utilización en esa universidad. Si tenemos 83 universidades es España, podríamos obtener unos beneficios de 83 * 500 = 41.500 euros.
+Si lo observamos en ese sentido se podría cobrar 500 euros por licencia, para su utilización en esa universidad. Si tenemos 83 universidades es España, podríamos obtener unos beneficios de 83 * 500 = 41.500 euros.
 
 \subsection{Viabilidad legal}
 
@@ -376,6 +376,6 @@ En esta sección hablaremos de la viabilidad del software utilizado, de si las l
 	UBULog 1.0 & \href{https://github.com/trona85/GII-17.1B-UBULog-1.0/blob/master/LICENSE}{ Eclipse Public License - v 1.0} \\
 } 
 
-Para la aplicación desarrollada y para lo que esta pensado, por las licencias que se están utilizando no hay ningún problema para su utilización, mientras compartamos todo el código utilizado.
+Para la aplicación desarrollada y para lo que está pensado, por las licencias que se están utilizando no hay ningún problema para su utilización, mientras compartamos todo el código utilizado.
 
 
