--- a/doc/proyectdoc/anexos.tex
+++ b/doc/proyectdoc/anexos.tex
@@ -32,10 +32,10 @@
 
 % Imagenes
 \usepackage{graphicx}
-\newcommand{\imagen}[2]{
+\newcommand{\imagen}[3]{
 	\begin{figure}[htbp]
 		\centering
-		\includegraphics[width=0.9\textwidth]{#1}
+		\includegraphics[width=#3\textwidth]{#1}
 		\caption{#2}\label{fig:#1}
 	\end{figure}
 	\FloatBarrier
@@ -312,7 +312,7 @@
   \thispagestyle{empty}
   % Cabecera ----------------
 \noindent\includegraphics[width=\textwidth]{cabecera}\vspace{1cm}%
-  \vfill
+\vfill
   % Título proyecto y escudo informática ----------------
   \colorbox{cpardoBox}{%
     \begin{minipage}{.8\textwidth}
