--- a/doc/proyectdoc/tex/1_Introduccion.tex
+++ b/doc/proyectdoc/tex/1_Introduccion.tex
@@ -3,13 +3,13 @@
 Los profesores, hoy en día, utilizan plataformas para poder facilitar su trabajo, proporcionando recursos, haciendo exámenes o teses, de manera on-line. No es que se quede anticuada la forma tradicional de impartir clases, si no que evoluciona, para facilitar el trabajo a ellos mismos y a los alumnos.
 La más utilizada y a la vez la que estamos utilizando en la Universidad de Burgos es Moodle, en concreto la versión 3.3.
 
-\imagen{citymoodle}{Estadística de ciudades que más utilizan Moodle.}
+\imagen{citymoodle}{Estadística de países que más utilizan Moodle.}{0.9}
 
-\imagen{cytiremoodle}{Datos de uso de Moodle.}
+\imagen{cytiremoodle}{Datos de uso de Moodle.}{0.9}
 
-\imagen{versionmoodle}{Versiones más utilizadas.}
+\imagen{versionmoodle}{Versiones más utilizadas.}{0.9}
 
-Lo que queremos conseguir aprovechando el potencial de Moodle, es, una aplicación de escritorio, en la que podremos pasar el log correspondiente, que nos lo generan los registros de Moodle en cada asignatura y el profesor puede acceder a ellos sin ningún problema, para facilitarle su interpretación, con un muestreo de los datos en formato de gráficas, filtrando por usuarios de esa asignatura (contando con el usuario administrador, el usuario sistema, usuario invitado y desconocido, como no sabemos los usuarios exactos que hay en los Moodle de producción, los colocaremos en desconocidos para controlar su interacción en la asignatura) y los tipos de evento realizado. 
+Lo que queremos conseguir aprovechando el potencial de Moodle, es, una aplicación de escritorio, en la que podremos pasar el log correspondiente, que nos lo generan los registros de Moodle en cada asignatura y el profesor puede acceder a ellos sin ningún problema, para facilitarle su interpretación, con un muestreo de los datos en formato de gráficas, filtrando por usuarios de esa asignatura y los tipos de evento realizado. 
 Con esto podremos permitir al profesor un control de su asignatura, casi completo. Por ejemplo, podrá saber cuántas veces un alumno ha entrado en calificaciones, ha subido un trabajo, hasta si un administrador ha estado visitando su asignatura o creado nuevos elementos en ella.
 
 
@@ -36,9 +36,12 @@ La memoria sigue la siguiente estructura:
 	\textbf{Aspectos relevantes del desarrollo:} exposición de aspectos
 	destacables que tuvieron lugar durante la realización del proyecto.
 	\item
+	\textbf{Trabajos relacionados:} Resumen de aplicaciones relacionadas con nuestro proyecto.
+	\item
 	\textbf{Conclusiones y líneas de trabajo futuras:} conclusiones
 	obtenidas tras la realización del proyecto y posibilidades de mejora o
 	expansión de la solución aportada.
+	
 \end{itemize}
 
 Junto a la memoria se proporcionan los siguientes anexos:
@@ -46,15 +49,15 @@ Junto a la memoria se proporcionan los siguientes anexos:
 \begin{itemize}
 	\tightlist
 	\item
-	\textbf{Plan de proyecto:} análisis de la viabilidad del proyecto y su planificación.
+	\textbf{Plan de Proyecto Software:} análisis de la viabilidad del proyecto y su planificación.
 	\item
-	\textbf{Requisitos:} exposición de los requisitos que debería de tener nuestra aplicación.
+	\textbf{Especificación de Requisitos:} exposición de los requisitos que debería de tener nuestra aplicación.
 	\item
-	\textbf{Diseño:} exposición del diseño de la aplicación.
+	\textbf{Especificación de diseño:} exposición del diseño de la aplicación.
 	\item
-	\textbf{Manual del programador:} aspectos relevantes del código fuente.
+	\textbf{Doc. técnica de programación:} aspectos relevantes del código fuente.
 	\item
-	\textbf{Manual del usuario:} guía detallada del manejo de la aplicación.
+	\textbf{Documentación de usuario:} guía detallada del manejo de la aplicación.
 \end{itemize}
 
 \section{Materiales adjuntos}\label{materiales-adjuntos}
@@ -64,7 +67,13 @@ Los materiales que se adjuntan con la memoria son:
 \begin{itemize}
 	\tightlist
 	\item
-	Aplicación UBULog 1.1
+	Aplicación UBULog.
+	\item
+	JavaDoc.
+	\item
+	Código fuente.
+	\item
+	Anexos.
 \end{itemize}
 
 Además, los siguientes recursos están accesibles a través de internet:
